2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that referer header field contains fragment.
	Now Request class removes fragment part of URI and encodes it
	in Request::setUri() and setReferer().
	* src/Request.h
	* src/Request.cc
	* test/RequestTest.cc

2008-10-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing m4 macros.
	* m4/cppunit.m4
	* m4/libgcrypt.m4
	* m4/libgnutls-extra.m4
	* m4/libgnutls.m4
	* m4/libxml2.m4

2008-10-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error with gcc-4.4(snapshot)
	* src/File.cc
	* src/FtpConnection.cc
	* src/OptionHandlerImpl.h
	* src/Util.cc
	
2008-10-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed assert()
	* src/SocketBuffer.cc (SocketBuffer::send)

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the type of _numNewConnection to unsigned int.
	* src/ActivePeerConnectionCommand.cc
	* src/ActivePeerConnectionCommand.h

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.16.0

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated doc
	* README

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated French, Simplified Chinese, German, Bulgarian and Japanese
	translations. Thanks to all translators.
	* po/bg.po
	* po/de.po
	* po/fr.po
	* po/ja.po
	* po/zh_CN.po

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.16.0.
	* configure.ac

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Casted entry->maxConnections to int32_t for std::min<T> with T =
	int32_t.
	Changed the type of count to int32_t.
	* src/Metalink2RequestGroup.cc

2008-10-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added test for Time::elapsed(time_t).
	* test/TimeTest.cc

2008-10-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug in Time::elapsed(): Util::difftvsec() is used where