@@ -1,5 +1,11 @@
 2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Fixed the bug that last character in URI is not encoded.
+	* src/Request.cc
+	* test/RequestTest.cc
+
+2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Fixed the bug that referer header field contains fragment.
 	Now Request class removes fragment part of URI and encodes it
 	in Request::setUri() and setReferer().
